--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div class="descriptionDiv">
+        <h1 class="title"></h1>
+        <p class="descriptionP"></p>
+        <div class="systemChoice">
+            <div class="first">
+                <ul>
+                    <li>
+                        <input type="radio" id="f2" name="f" value="2" class = "radio1">
+                        <label for="f2">Двоичная</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="f8" name="f" value="8" class = "radio1">
+                        <label for="f8">Восьмеричная</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="f10" name="f" value="10" class = "radio1">
+                        <label for="f10">Десятичная</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="f16" name="f" value="16" class = "radio1">
+                        <label for="f16">Шестнадцатеричная</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="second">
+                <ul>
+                    <li>
+                        <input type="radio" id="s2" name="s" value="2" class = "radio2">
+                        <label for="s2">Двоичная</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="s8" name="s" value="8" class = "radio2">
+                        <label for="s8">Восьмеричная</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="s10" name="s" value="10" class = "radio2">
+                        <label for="s10">Десятичная</label> 
+                    </li>
+                    <li>
+                        <input type="radio" id="s16" name="s" value="16" class = "radio2">
+                        <label for="s16">Шестнадцатеричная</label>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <script src="script/main.js"></script>
 </body>
 </html>
