--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <button class="backButton1">Назад</button>
     </div>
     <div class="mainDiv hide">
-        <input type="number" class="mainInput" placeholder="Введи число">
+        <input type="text" class="mainInput" placeholder="Введи число">
         <button class="mainButton">Принять</button>
         <button class="backButton2">Назад</button>
     </div>
