--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="descriptionDiv">
-        <h1></h1>
-        <p></p>
+    <div class="descriptionDiv"> <!--Меню-->
+        <!-- <h1></h1>
+        <p></p> -->
         <button class="calculator">Калькулятор</button>
         <button class="tasks">Задания</button>
     </div>
-    <div class="tasksDiv hide">
+    <div class="tasksDiv hide"> <!--Задания-->
         <p>Начальная система счисления:</p>
         <select name="start" id="start">
             <option value="s2">Двоичная</option>
@@ -30,7 +30,7 @@
             <option value="e16">Шестнадцатеричная</option>
         </select>
     </div>
-    <div class="systemDiv hide">
+    <div class="systemDiv hide"> <!--Калькулятор-->
         <div class="systemChoice">
             <div class="first">
                 <ul>
