--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <button class="mainButton slide-top"><span>Принять</span></button>
         <button class="backButton2 slide-top"><span>Назад</span></button>
     </div>
+    <div class="tableDiv hide slide-top"></div>
     <script src="script/main.js"></script>
 </body>
 </html>
